# smartiq-src

./: Dockerfile  README.md  dockerfile  pyproject.toml
smartiq_srm/: __init__.py  config.py
smartiq_srm/command/: __init__.py  main.py
smartiq_srm/lib/: utils.py
smartiq_srm/resources/: task_config.yaml
smartiq_srm/resources/config/: smartiq_srm.conf
smartiq_srm/scheduler/: const.py  scheduler.py  task_manager.py
smartiq_srm/tasks/: task1.py
smartiq_srm/web_service/: app.py  schema.py
smartiq_srm/web_service/api/: manager.py
